<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FirstScreen">

    <!--iv_photo-->
    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <!--et_name-->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:background="@drawable/et_border"
        android:backgroundTint="@color/white"
        android:hint="@string/name"
        android:textColorHint="@color/dark_grey"
        android:autofillHints="Name"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo" />
    <!--et_palindrome-->
    <EditText
        android:id="@+id/et_palindrome"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:background="@drawable/et_border"
        android:backgroundTint="@color/white"
        android:hint="@string/name"
        android:textColorHint="@color/dark_grey"
        android:autofillHints="Palindrome"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>
    <!--mbtn_check-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_check"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        app:cornerRadius="12dp"
        android:text="@string/check"
        android:textAllCaps="true"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/btn_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_palindrome"/>
    <!--mbtn_next-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_next"
        android:layout_width="310dp"
        android:layout_height="48dp"
        app:cornerRadius="12dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/btn_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbtn_check"/>

</androidx.constraintlayout.widget.ConstraintLayout>